# ICER_user_data_analytics

./: .gitignore  FullDatUnderUtiliz.ipynb  FullSLURM-data-analysis.ipynb  ICER_package_demo.ipynb  INSTALL.md  IdentifyUnderUtilizersSLURM-Analysis.ipynb  IdentifyingUnderUtilizersGPFS.ipynb  IdentifyingUnderutilizersSLURM.ipynb  LICENSE  README.md  RQ3-PreditctingQueutime-SLURM.ipynb  SCRATCHPAD.ipynb  SLURM-Analysis.ipynb  SLURM-FullDataAnalysis.ipynb  SLURM-analysis.ipynb  SLURM_Data_Exploration.ipynb  UsersWithManyFIlesGPFS.ipynb  data_insights_GL.ipynb  data_insights_GPFS.ipynb  demo.ipynb  environment.yml  makefile  manualUIDcode.py  manualUIDcode.sh  pyproject.toml  research_questions.md  slurm-31001359.out  slurm-31005065.out
.ipynb_checkpoints/: ICER_package_demo-checkpoint.ipynb  IdentifyUnderUtilizersSLURM-Analysis-checkpoint.ipynb  IdentifyingUnderUtilizersGPFS-checkpoint.ipynb  data_insights_GPFS-checkpoint.ipynb
ICER_Data_Package/: DataAnalyzer.py
ICER_Data_Package/.ipynb_checkpoints/: DataAnalyzer-checkpoint.py
ICER_User_Dat/: CMSE495.ipynb  DataAnalyzer.py  HelloWorld.ipynb  SLURM K-Means Clean.ipynb  SLURM RIchie.ipynb  SLURM_Grouping_V2.ipynb  models.py  wesley.txt
ICER_User_Dat/.ipynb_checkpoints/: SLURM RIchie-checkpoint.ipynb
ICER_User_Dat/FilesPerUser/: FilePerUserCDF-job.py
ICER_User_Dat/RQ1/: IdentifyUnderUtilizersSLURM-Analysis.ipynb
ICER_User_Dat/tests/: test_gpfs.csv  (+2 more)
ICER_package/: DataAnalyzer.py
data/: PreprocessingData-SLURM-GPFS.ipynb  gpfs_sample_data.csv
mypackage/: example.py
reproducibility/: predict_walltime.ipynb
(+21 files in other folders)
