[project]
name = "icer_user_dat"
version = "0.0.1"
authors = [
  { name="Elias Taira", email="tairaeli@msu.edu" }, 
  { name="Richard Arbury", email="arburyri@msu.edu" }, 
  { name="Shams Al khakidy", email="casalet3@msu.edu" }, 
  { name="Wesely Casaletto", email="alkhali7@msu.edu" }, 
  { name="Luke Kozlowski", email="kozlow86@msu.edu" }, 
]
description = "A python package designed to process the user data from the MSU HPCC"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
where = ["ICER_User_Dat"]
include = ["models*"]
dependencies = [
    pdoc3,
    pip,
    pytest,
    pydocstyle,
    pylint,
    notebook,
    numpy>=1.26.3,
    scikit-learn>=1.3.0,
    matplotlib>=3.8.0,
    pandas>=2.1.4,
    seaborn>=0.12.2,
]
[project.urls]
Homepage = "https://github.com/tairaeli/ICER_user_data_analytics.git"